# bedrock-blog-buddy

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: BlogBuddy.py  BlogBuddy_Config.py  blog_utils.py  config.json  utils.py
app/lancedb/mlblogs_cohere_embed_english_v3.lance/_transactions/: 0-8056885a-915c-431b-9720-d5132ed697ea.txn  1-4d940007-710d-406b-9bc7-93f2fc0699b0.txn
app/lancedb/mlblogs_cohere_embed_english_v3.lance/data/: b4e96ffe-f182-40f4-bc33-fb8ead289bf7.lance
app/pages/: 1_✚_Add_Data.py  1_🕟_Refresh_Data.py  2_✚_Chat.py  2_🕟_Refresh_Data.py  2_🤖_Chat.py
app/prompts/: rag_prompt_v2.txt  rag_prompt_v21.txt
