[tool.poetry]
name = "bedrock-blog-buddy"
version = "0.1.0"
description = "A streamlit chatbot for querying AWS blog posts. Built using Amazon Bedrock models"
authors = ["Praveen Chamarthi <1090396+praveenc@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.30.0"
duckdb = "^0.9.2"
lancedb = "^0.4.4"
boto3 = "^1.34.17"
anthropic-bedrock = "^0.5.9"
loguru = "^0.7.2"
unstructured = {extras = ["all-docs"], version = "^0.12.0"}
transformers = "^4.36.2"
langchain = "^0.1.0"
watchdog = "^3.0.0"
spacy = "^3.7.2"
feedparser = "^6.0.11"
bs4 = "^0.0.1"
black = "^23.12.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
